--- a/app/perfil.html
+++ b/app/perfil.html
@@ -93,6 +93,8 @@
                         <div class="editable" contenteditable="true" @input="updateServices" v-html="user.servicios"></div>
                     </div>
                     <button type="submit" class="btn btn-primary">Actualizar Perfil</button>
+                    <a href="../index.html" class="btn btn-danger">Cerrar Sesión</a>
+
                 </form>
             </div>
         </div>
